# codesum

./: Cargo.toml
benches/: main.rs
benches/functions/: mod.rs  read_files.rs  validate_result.rs
src/: cli.rs  lib.rs  main.rs  reader.rs  test_utils.rs
src/reader/: concurrent.rs  simple.rs
tests/: cli.rs
